--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -9,28 +9,23 @@
     <div class="container_main container ">
       <div class="list_div">
         <div>
-          <ul class="list" style="cursor: pointer">
-            <li><a (click)="getAllPost()"
-            >All posts</a></li>
+          <ul class="list">
+            <li (click)="getAllPost()">All posts</li>
           </ul>
         </div>
-        <span >
           <div *ngFor="let category of allCategories">
-            <ul class="list">
-              <li>
-                <a
-                  [routerLink]="['']"
-                  (click)="getQueryFromCategory(category.name); getSubCategoryList(category)">
-                  {{category.name}}
-                </a>
+            <ul class="list" id="category_menu">
+              <li
+                (click)="getQueryFromCategory(category.name); getSubCategoryList(category)">
+                {{category.name}}
               </li>
             </ul>
             <div *ngIf="collapseSubCategory && categoryInfo.id === category.id">
               <ng-container *ngFor="let subCategory of category.subCategories">
                 <ul class="sub-ul">
                   <li class="sub-li">
-                    <a [routerLink]="['']"
-                       (click)="getQueryFromSubCategories(subCategory.name)">
+                    <a
+                      (click)="getQueryFromSubCategories(subCategory.name)">
                       {{subCategory.name}}
                     </a>
                   </li>
@@ -38,13 +33,11 @@
               </ng-container>
             </div>
           </div>
-        </span>
       </div>
       <div class="posts-container">
         <div class="main-posts">
-
           <div class="wrapper_empty_posts" *ngIf="!(allPosts.length > 0)">
-            <h1>No posts in this category or sub-category</h1>
+            <h1>No posts found</h1>
           </div>
           <div *ngFor="let post of allPosts" class="example">
             <mat-card class="example-card" [routerLink]="['/post', post.id]">
