--- a/src/app/components/add-category/edit-category/edit-category.component.scss
+++ b/src/app/components/add-category/edit-category/edit-category.component.scss
@@ -1,14 +1,15 @@
 .body_edit_categories {
   background-color: #1f2329;
   min-height: 100%;
-  padding-top: 48px;
+  padding-top: 100px;
   display: flex;
+  justify-content: center;
 }
+
 .main_form_div {
-  width: 650px;
-  max-width: 1328px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 90vw;
+  max-width: 600px;
+  margin: 48px 48px 48px 48px;
   background-color: #1c1e27;
   min-height: 200px;
   height: fit-content;
@@ -33,15 +34,162 @@
   cursor: pointer;
 }
 
-.mat_field {
-  background-color: floralwhite;
+form {
+  margin: 25px 0 25px 25px;
+  max-height: 100%;
+}
+
+.mat_field_category {
   width: fit-content;
   height: fit-content;
   border-radius: 10px;
+
+  mat-label {
+    color: #a2a9b9;
+  }
+
+  mat-hint {
+    color: #a2a9b9;
+  }
+
+  input::placeholder {
+    color: #a2a9b9;
+    font-size: 12px;
+  }
+
+  input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px #1c1e27 inset;
+    -webkit-text-fill-color: #999;
+  }
+
+  input:-webkit-autofill:focus {
+    -webkit-text-fill-color: #a2a9b9;
+  }
+
+  input {
+    color: #a2a9b9;
+  }
 }
-form {
-  margin-left: 25px;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  max-height: 100%;
+
+.mat_field_role {
+  margin-left: 15px;
+  border-radius: 10px;
+
+  mat-label {
+    color: #a2a9b9;
+  }
+}
+
+.mat-option {
+  background-color: #1f2329;
+}
+
+::ng-deep .mat-option-text {
+  color: #a2a9b9;
+}
+
+mat-select-trigger {
+  color: #a2a9b9;
+}
+
+::ng-deep .mat-select-arrow {
+  color: #a2a9b9;
+}
+
+::ng-deep .mat-select-panel {
+  border-radius: 0 !important;
+
+}
+::ng-deep .mat-select-panel-wrap {
+   flex-basis: auto!important;
+}
+::ng-deep.cdk-overlay-pane {
+  font-size: 16px!important;
+}
+
+::ng-deep #mat-select-2-panel {
+  display: initial!important;
+  width: auto!important;
+}
+
+::ng-deep .mat-form-field-wrapper {
+  margin-bottom: 24px;
+}
+
+.cancel-btn {
+  margin: 0 0 25px 25px;
+}
+
+.main-btn {
+  background-color: #1c1e27;
+  box-shadow: 0 1px 0 1px #0c0b0b, 0 3px 3px 1px #111314;
+  color: #3884ff;
+  border: 1px solid #1d1e22;
+  border-radius: 8px;
+  margin-top: inherit;
+}
+
+.sub-category-form {
+  margin-left: 100px;
+}
+
+.sub_button {
+  background-color: #1c1e27;
+  box-shadow: 0 1px 0 1px #0c0b0b, 0 3px 3px 1px #111314;
+  color: red;
+  border: 1px solid #1d1e22;
+  border-radius: 8px;
+  margin-left: 24px;
+}
+
+.btn-wrapper {
+  margin: 20px 0 0 0;
+}
+
+@media screen and (max-width: 560px) {
+  ::ng-deep.mat-form-field-infix {
+    width: auto !important;
+  }
+  .sub-category-form {
+    margin-left: 15px;
+  }
+  .sub_button {
+    margin-left: 18px;
+  }
+  @media screen and (max-width: 400px) {
+    ::ng-deep.mat-form-field-flex {
+      width: auto !important;
+    }
+    //::ng-deep.mat-form-field-infix {
+    //  width: auto!important;
+    //}
+    ::ng-deep.mat-form-field-wrapper{
+      width: 125px !important;
+    }
+    ::ng-deep .mat-form-field-underline {
+      width: auto;
+    }
+    ::ng-deep.mat_field_role {
+      width: 50px;
+      margin-left: 15px;
+      border-radius: 10px;
+    }
+
+    .add-sub-btn {
+      position: absolute;
+      margin-left: 53px;
+      font-size: 38px;
+      text-decoration: none;
+      border: none;
+      background: none;
+      color: green;
+      cursor: pointer;
+    }
+    .sub_button {
+      margin-left: 64px;
+    }
+    .delete-btn {
+      margin-left: 79px;
+    }
+  }
 }
