fixed bugs with closing windows when navigating

--- a/src/app/components/post/post-dialogs/warning-dialog/warning-dialog.component.scss
+++ b/src/app/components/post/post-dialogs/warning-dialog/warning-dialog.component.scss
@@ -6,6 +6,10 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    @media screen and (max-width: 500px) {
+        width: auto;
+        max-width: 420;
+    }
 }
 
 .title {
