--- a/src/app/components/post/user-posts/user-posts.component.html
+++ b/src/app/components/post/user-posts/user-posts.component.html
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="mat-fab-container mat-fab-container-settings">
-        <button mat-fab class="dialog-btn" color="primary" [matMenuTriggerFor]="menu" style="background-color:#14171c;color: rgb(68, 119, 222);">
+        <button mat-fab class="dialog-btn" color="primary" [matMenuTriggerFor]="menu" style="background-color:#14171c;color: rgb(68, 119, 222); border:1px solid rgb(68, 119, 222);">
           <mat-icon>settings</mat-icon>
         </button>
       </div>
@@ -119,7 +119,7 @@
         </button>
       </mat-menu>
       <div class="mat-fab-container mat-fab-container-add">
-        <button mat-fab class="dialog-btn" color="primary" (click)="addPost()" style="background-color:#14171c;color: rgb(68, 119, 222);" >
+        <button mat-fab class="dialog-btn" color="primary" (click)="addPost()" style="background-color:#14171c; color: rgb(68, 119, 222); border:1px solid rgb(68, 119, 222);" >
           <mat-icon>add</mat-icon>
         </button>
       </div>
