--- a/src/app/components/post/views/post-view-main/post-view.component.scss
+++ b/src/app/components/post/views/post-view-main/post-view.component.scss
@@ -48,6 +48,10 @@ p {
     font-family: "Arimo", sans-serif;
     line-height: 56px;
     font-size: 46px;
+    @media screen and (max-width: 600px) {
+        line-height: 44px;
+        font-size: 38px;
+    }
 }
 
 a {
@@ -84,9 +88,6 @@ a {
             width: 100%;
             text-align: left;
         }
-        @media screen and (max-width: 546px) {
-           
-        }
     }
     .reading-time,
     .data-creation {
@@ -117,20 +118,20 @@ a {
             text-align: start;
             width: 70%;
         }
-        .author-icon,.author-name {
+        .author-icon,
+        .author-name {
             margin-bottom: 10px;
         }
-        .data-creation{
+        .data-creation {
             padding: 0px;
             padding-right: 10px;
         }
     }
 }
 
-.mat-icon-visibility_off{
+.mat-icon-visibility_off {
     display: none;
     @media screen and (max-width: 1200px) {
         display: inline-block;
     }
 }
-
