--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,15 +1,5 @@
 h2 {
-  margin-top: 0;
-  margin-bottom: 12px;
-  font-family: Inter, sans-serif;
-  line-height: 1.15em;
-  display: block;
-  font-size: 1.5em;
-  margin-block-start: 0.83em;
-  margin-block-end: 0.83em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-weight: bold;
+  display: flex;
 }
 
 a {
@@ -42,7 +32,8 @@ a {
   background-color: #1f2329;
 }
 
-.w-nav:after, .w-nav:before {
+.w-nav:after,
+.w-nav:before {
   content: " ";
   display: table;
   grid-column-start: 1;
@@ -55,7 +46,8 @@ a {
   clear: both;
 }
 
-.w-nav:after, .w-nav:before {
+.w-nav:after,
+.w-nav:before {
   content: " ";
   display: table;
   grid-column-start: 1;
@@ -74,45 +66,33 @@ a {
   display: -ms-flexbox;
   display: flex;
   height: 100%;
+  z-index: 1;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  justify-content: space-between;
 }
 
-.brand {
+.header__logo {
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  color: #fff;
+  width: 146px;
+  height: 30px;
+  color: white;
 }
 
-.w-nav-brand {
+.header__menu {
   position: relative;
-  float: left;
-  text-decoration: none;
-  color: #333;
-}
-
-.nav-menu {
-  position: relative;
-  z-index: 999;
   overflow: visible;
   height: auto;
 }
 
-.w-nav-menu {
+.heade__body {
   position: relative;
-  float: right;
-}
-
-.nav-menu-content {
-  position: relative;
+  z-index: 2;
   left: auto;
   top: 0;
   right: 0;
@@ -131,6 +111,30 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.header__burger {
+  display: none;
+}
+
+.header__nav {
+  display: flex;
+  transition: 200ms ease;
+}
+
+.header__logOut {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar-opened {
+}
+
+.w-nav-menu {
+  position: relative;
+  float: right;
 }
 
 .nav-links-wrapper {
@@ -217,20 +221,20 @@ a {
   border: 2px solid #3884ff;
   border-radius: 4px;
   background-color: #3884ff;
-  -webkit-transition: .2s;
-  transition: .2s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
   font-family: Inter, sans-serif;
   color: #fff;
   font-size: 16px;
   line-height: 22px;
   font-weight: 700;
-  letter-spacing: .4px;
+  letter-spacing: 0.4px;
   text-decoration: none;
   text-transform: capitalize;
 }
 
 .filled-btn-arrow-text {
-  display: block;
+  display: flex;
   margin-right: 8px;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
@@ -242,8 +246,8 @@ a {
 }
 
 .nav-link-wrap.nonauth {
-  -webkit-transition: .2s;
-  transition: .2s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .filled-btn-arrow.no-margin-top {
@@ -276,6 +280,89 @@ a {
   max-width: 1328px;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 48px;
-  padding-left: 48px;
+  padding-right: 3em;
+  padding-left: 3em;
+}
+
+.header__body {
+  display: flex;
+  justify-content: space-between;
+  height: 80px;
+  background-color: #1f2329;
+  align-items: center;
+  margin-top: 0;
+  margin-left: 5em;
+  margin-right: 5em;
+  transition: 200ms ease;
+}
+
+
+mat-icon {
+  color: #fff;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+@media (max-width: 920px) {
+  .header__burger {
+    display: flex;
+    width: 30px;
+    height: 20px;
+  }
+  .header__body {
+  }
+  .header__nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    position: absolute;
+    align-items: center;
+    top: 3.4em;
+    right: 1.3em;
+    background-color: #1f2329;
+    border-radius: 10px;
+    border: blue 2px solid;
+    padding: 0.7em;
+    transition: 200ms ease;
+  }
+  .header__logOut {
+    display: flex;
+    flex-direction: column;
+  }
+  .header__menu {
+    z-index: 2;
+  }
+
+  .filled-btn-arrow {
+    margin-right: 0;
+  }
+
+  .nav-link-wrap {
+    padding: 0;
+    margin-right: 0;
+  }
+
+  .hiden {
+    display: none;
+  }
+
+  a:hover {
+  }
+  // .header__logOut {
+  //   // display: flex;
+  //   // flex-direction: column;
+  //   align-items: flex-start;
+  //   position: fixed;
+  //   top: 50px;
+  //   left: 0;
+  // }
+}
+
+@media (max-width: 400px) {
+  .header__body {
+    margin-left: 2em;
+    margin-right: 2em;
+    transition: 200ms ease;
+  }
+
 }
