--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <div class="section blog wf-section">
+  <div class="section">
     <div class="container w-container">
       <h2 class="purple-header">Powered by InventorWiki</h2>
       <p class="paragraph-580px left-660px">Individuals and teams from all over the world are publishing amazing content
@@ -13,26 +13,26 @@
             <li (click)="getAllPost()">All posts</li>
           </ul>
         </div>
-          <div *ngFor="let category of allCategories">
-            <ul class="list" id="category_menu">
-              <li
-                (click)="getQueryFromCategory(category.name); getSubCategoryList(category)">
-                {{category.name}}
-              </li>
-            </ul>
-            <div *ngIf="collapseSubCategory && categoryInfo.id === category.id">
-              <ng-container *ngFor="let subCategory of category.subCategories">
-                <ul class="sub-ul">
-                  <li class="sub-li">
-                    <a
-                      (click)="getQueryFromSubCategories(subCategory.name)">
-                      {{subCategory.name}}
-                    </a>
-                  </li>
-                </ul>
-              </ng-container>
-            </div>
+        <div *ngFor="let category of allCategories">
+          <ul class="list" id="category_menu">
+            <li
+              (click)="getQueryFromCategory(category.name); getSubCategoryList(category)">
+              {{category.name}}
+            </li>
+          </ul>
+          <div *ngIf="collapseSubCategory && categoryInfo.id === category.id">
+            <ng-container *ngFor="let subCategory of category.subCategories">
+              <ul class="sub-ul">
+                <li class="sub-li">
+                  <a
+                    (click)="getQueryFromSubCategories(subCategory.name)">
+                    {{subCategory.name}}
+                  </a>
+                </li>
+              </ul>
+            </ng-container>
           </div>
+        </div>
       </div>
       <div class="posts-container">
         <div class="main-posts">
