--- a/src/app/components/main-page/main-page.scss
+++ b/src/app/components/main-page/main-page.scss
@@ -140,6 +140,7 @@ mat-card {
 }
 
 mat-card-title {
+  white-space: nowrap;
   color: #fff;
   font-size: 20px;
   font-weight: 700;
@@ -200,8 +201,6 @@ mat-card-content {
 
 .section {
   padding-top: 30px;
-  // padding-top: 60px;
-  // padding-bottom: 60px;
 }
 
 .w-container {
@@ -299,6 +298,11 @@ mat-card-content {
     }
     .example-card {
       min-width: 100%;
+    }
+    @media screen and (max-width: 600px) {
+      .list {
+        width: 83%;
+      }
     }
 }
 
