--- a/src/app/components/add-category/edit-category/edit-category.component.html
+++ b/src/app/components/add-category/edit-category/edit-category.component.html
@@ -33,7 +33,7 @@
           <div *ngFor="let subCategory of subCategoriesFormArray.controls let i = index">
             <mat-form-field class="mat_field_category" appearance="fill">
               <mat-label>Sub-category</mat-label>
-              <input matInput [placeholder]="'sub-category ' + (i + 1)" [formControlName]="i" [autocomplete] [disabled]="true">
+              <input matInput [placeholder]="'sub-category ' + (i + 1)" [formControlName]="i">
               <mat-error *ngIf="subCategory.invalid && subCategory.dirty || subCategory.touched">
                 <mat-error *ngIf="subCategory.errors?.pattern">Start with a capital letter</mat-error>
                 <mat-error class="error" *ngIf="subCategory.errors?.required">Field is required</mat-error>
@@ -53,7 +53,7 @@
           <div *ngFor="let subCategory of subCategoriesFormArray.controls let i = index">
             <mat-form-field class="mat_field_category" appearance="fill" >
               <mat-label>Sub-category</mat-label>
-              <input matInput [placeholder]="'sub-category ' + (i + 1)" [formControlName]="i" autocomplete="false">
+              <input matInput [placeholder]="'sub-category ' + (i + 1)" [formControlName]="i">
               <mat-error *ngIf="subCategory.invalid && subCategory.dirty || subCategory.touched">
                 <mat-error *ngIf="subCategory.errors?.pattern">Start with a capital letter</mat-error>
                 <mat-error class="error" *ngIf="subCategory.errors?.required">Field is required</mat-error>
@@ -68,7 +68,9 @@
         </div>
       </div>
       <div class="btn-wrapper">
-        <button mat-flat-button class="sub_button" [disabled]=" !(form.valid)" (click)="updateCategory()"
+        <button mat-flat-button class="sub_button"
+                [disabled]=" !(form.valid) || !isUpdatedBtnActive"
+                (click)="updateCategory()"
                 style="color: yellow; margin-left: 0">Update
         </button>
         <button class="sub_button delete-btn"
