--- a/src/app/components/role/role-page/role-page.component.scss
+++ b/src/app/components/role/role-page/role-page.component.scss
@@ -13,7 +13,6 @@
 
 .user {
   height: auto;
-  // width: 1000px;
   margin-top: 2em;
   margin-bottom: 2em;
 }
@@ -21,28 +20,30 @@
 .card {
   border: 2px solid #3884ff;
   background-color: #1f2329;
-  // background: linear-gradient(135deg, rgb(0, 109, 112), rgb(31, 35, 41) 13%);
-  // background: linear-gradient(135deg, rgb(94, 166, 233), rgb(31, 35, 41) 75%);
   color: #fff;
   width: 45vw;
+  transition: 200ms ease;
 }
 
 .create__btn {
   height: auto;
   width: 50vw;
-  // margin-top: 1.5em;
   margin-bottom: 3em;
-  // border: 2px solid #3884ff;
 }
 
 ::ng-deep .mat-checkbox-background {
   background-color: #3884ff;
-  // background-color: #005691;
-  // outline-style: rgb(228, 233, 235) !important;
+
 }
 ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background {
   background-color: #3884ff;
-  // background-color: #005691;
   border-color: rgb(228, 233, 235) !important;
-  // outline-style: rgb(228, 233, 235) !important;
+}
+
+
+@media (max-width: 920px) {
+  .card {
+    width: 85vw;
+    transition: 200ms ease;
+  }
 }
