redirect bug fixed

--- a/src/app/components/login/reset-password/reset-password.component.html
+++ b/src/app/components/login/reset-password/reset-password.component.html
@@ -16,7 +16,7 @@
 
             </mat-form-field>
 
-            <button class="form__btn" mat-button (click)="SendForReset()" [disabled]="resetGroup.invalid"
+            <button class="form__btn" mat-button (click)="SendForReset()" [disabled]="resetGroup.invalid || isFetching"
                 type="submit">Send</button>
 
             <mat-error *ngIf="isError">{{errorMessage}}</mat-error>
