--- a/src/app/components/users/users-page/users-page.component.html
+++ b/src/app/components/users/users-page/users-page.component.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <button mat-fab class="dialog-btn">
+  <button mat-fab class="dialog-btn" style="background-color: #3884ff; color: white;">
     <mat-icon (click)="showForm()">add</mat-icon>
   </button>
 </div>
