--- a/src/app/components/role/create-role-form/create-role-form.component.scss
+++ b/src/app/components/role/create-role-form/create-role-form.component.scss
@@ -8,7 +8,7 @@
     color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     .form {
-      padding: 20px;
+      // padding: 20px;
       display: flex;
       flex-direction: column;
 
@@ -66,6 +66,9 @@
 
 
 @media screen and (max-width: 850px) {
+  .form__container {
+    width: auto;
+  }
   h2 {
     margin: 0px !important;
   }
