--- a/src/app/components/users/add-user-form/add-user-form.component.html
+++ b/src/app/components/users/add-user-form/add-user-form.component.html
@@ -1,4 +1,3 @@
-<div class="page">
     <div class="form__container">
         <h2 class="form__title">Add new user</h2>
         <form class="form" [formGroup]="registerForm">
@@ -6,7 +5,7 @@
 
             <mat-form-field appearance="legacy" color="accent">
                 <mat-label>First Name</mat-label>
-                <input type="text" matInput placeholder="Type your first name" formControlName="firstName">
+                <input type="text" matInput placeholder="Type user's first name" formControlName="firstName">
                 <mat-icon matPrefix>person_outline</mat-icon>
 
                 <mat-error *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)">
@@ -21,7 +20,7 @@
 
             <mat-form-field appearance="legacy" color="accent">
                 <mat-label>Last Name</mat-label>
-                <input type="text" matInput placeholder="Type your last name" formControlName="lastName">
+                <input type="text" matInput placeholder="Type user's last name" formControlName="lastName">
                 <mat-icon matPrefix>person_outline</mat-icon>
 
                 <mat-error *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)">
@@ -35,7 +34,7 @@
 
             <mat-form-field appearance="legacy" color="accent">
                 <mat-label>Email</mat-label>
-                <input type="text" matInput formControlName="email" placeholder="Type your email">
+                <input type="text" matInput formControlName="email" placeholder="Type user's email">
                 <mat-icon matPrefix>mail_outline</mat-icon>
 
                 <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
@@ -48,7 +47,7 @@
 
             <mat-form-field appearance="legacy" color="accent">
                 <mat-label>Password</mat-label>
-                <input type="password" matInput formControlName="password" placeholder="Type your Password">
+                <input type="password" matInput formControlName="password" placeholder="Type user's Password">
                 <mat-icon matPrefix>lock</mat-icon>
 
                 <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
@@ -61,7 +60,7 @@
 
             <mat-form-field appearance="legacy" color="accent">
                 <mat-label>Confirm Password</mat-label>
-                <input type="password" matInput formControlName="confirmPassword" placeholder="Repeat your password">
+                <input type="password" matInput formControlName="confirmPassword" placeholder="Repeat user's password">
                 <mat-icon matPrefix>lock</mat-icon>
 
                 <mat-error *ngIf="confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched)">
@@ -87,4 +86,3 @@
         </form>
 
     </div>
-</div>
