--- a/src/app/components/users/users-page/users-page.component.scss
+++ b/src/app/components/users/users-page/users-page.component.scss
@@ -7,11 +7,9 @@
 
 .users {
   padding: auto;
-  margin-left: 15%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
-  width: 80%;
+  justify-content: center;
 }
 
 .user {
@@ -27,15 +25,14 @@
     margin: 1rem;
     height: 15rem;
 
-
     .name {
-     padding: 5%;
-     padding-bottom: 0;
-     margin-bottom: 1%;
-     border-radius: 15px;
-     border-bottom-left-radius: 0;
-     border-bottom-right-radius: 0;
-     color: #3884ff;
+      padding: 5%;
+      padding-bottom: 0;
+      margin-bottom: 1%;
+      border-radius: 15px;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      color: #3884ff;
     }
 
     p {
@@ -45,7 +42,6 @@
       padding-left: 5%;
       padding-right: 5%;
       text-align: center;
-
     }
 
     .email {
@@ -81,17 +77,9 @@
 }
 
 @media (max-width: 375px) {
-  
-  .users {
-    margin-left: 2%;
-    width: 70%;
-  }
-  
   .user {
     .user-information {
       width: 20rem;
-  
     }
   }
 }
-
