--- a/src/app/components/login/reset-password/reset-password.component.scss
+++ b/src/app/components/login/reset-password/reset-password.component.scss
@@ -43,8 +43,11 @@
         font-weight: normal;
     }
 }
-.page {
-    min-width: 100vw;
-    min-height: 100vh;
-    background: #1f2329;
+
+@media (max-width: 500px) {
+    .form {
+        &__container {
+            width: auto;
+        }
+    }
 }
